Update overflow: scroll

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,8 +62,11 @@ li {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-
 	position: relative;
+}
+
+.text {
+	overflow: scroll;
 }
 
 .close {
