--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Akaya Kanadaka', cursive;
+  font-family: "Akaya Kanadaka", cursive;
   background-color: khaki;
 }
 
@@ -90,14 +90,24 @@ li {
 }
 
 .text {
-  overflow: scroll;
+  overflow: auto;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
 }
 
 .close {
+  overflow: hidden;
   height: 30px;
+  line-height: 20px;
   font-size: 50px;
   display: block;
-  line-height: 25px;
   -webkit-transition: 0.3s linear;
   transition: 0.3s linear;
 }
@@ -116,7 +126,7 @@ li.checked {
 }
 
 .text.checked::before {
-  content: '';
+  content: "";
   position: absolute;
   border-color: #fff;
   border-style: solid;
